--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <app-foodcourt-summary></app-foodcourt-summary>
+<div>
+  <app-header></app-header>
+  <router-outlet></router-outlet>
 </div>
 
 
