--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,11 @@
-<p>
-  home works!
-</p>
+<div class="card">
+  <img src="./assets/images/maxresdefault.jpg" style="max-width: 24%">
+  <div class="card-body">
+    <h4 class="card-title">Welcome to SP Foodcourts!</h4>
+    <p class="card-text">
+      Some quick example text to build on the card title
+      and make up the bulk of the card's content.
+    </p>
+    <a href="#!" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
