--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <div class="card">
-  <img src="./assets/images/maxresdefault.jpg" style="max-width: 24%">
+  <img src="./assets/images/maxresdefault.jpg">
   <div class="card-body">
     <h4 class="card-title">Welcome to SP Foodcourts!</h4>
     <p class="card-text">
       Some quick example text to build on the card title
       and make up the bulk of the card's content.
     </p>
-    <a href="#!" class="btn btn-primary">Go somewhere</a>
+    <a routerLink="/foodcourt-summary" class="btn btn-primary">View Foodcourt information</a>
   </div>
 </div>
