--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,6 @@
       Some quick example text to build on the card title
       and make up the bulk of the card's content.
     </p>
-    <a routerLink="/foodcourt-summary" class="btn btn-primary">View Foodcourt information</a>
+    <a routerLink="/foodcourt-summary" class="btn btn-primary">View foodcourt information</a>
   </div>
 </div>
