--- a/src/app/foodcourt-summary/foodcourt-summary.component.html
+++ b/src/app/foodcourt-summary/foodcourt-summary.component.html
@@ -4,13 +4,13 @@
                 <h3>{{fc.fc_name}}</h3>
                 <h4>{{fc.location}}</h4>
                 <h4>{{fc.op_hours}}</h4>
-                <span (click)="onViewDetail(fc.fc_id, fc.fc_name, i)" >[view]</span>
+                <span (click)="onViewDetail(fc.fc_id, fc.fc_name, i)" >[View stalls]</span>
             </div>
             <div class="col" *ngIf = "fc.fc_id == 2">
                 <h3>{{fc.fc_name}}</h3>
                 <h4>{{fc.location}}</h4>
                 <h4>{{fc.op_hours}}</h4>
-                <span (click)="onViewDetail(fc.fc_id, fc.fc_name, i)" >[view]</span>
+                <span (click)="onViewDetail(fc.fc_id, fc.fc_name, i)" >[View stalls]</span>
             </div>
           </div>
-      </div>
+</div>
