--- a/src/app/foodcourtdetail/foodcourtdetail.component.html
+++ b/src/app/foodcourtdetail/foodcourtdetail.component.html
@@ -1,10 +1,11 @@
 <div class="card">
     <div class="card-body">
       <h4 class="card-title"> {{selectedFoodCourt.fc_name}}</h4>
-      <h6 class="card-subtitle mb-2 text-muted">{{selectedFoodCourt.location}}</h6>
-      <p class="card-text">
-        {{selectedFoodCourt.op_hours}}.
-      </p>
+      <h6 class="card-subtitle mb-2 text-muted">Available stalls</h6>
+        <p class="card-text">
+          
+        </p>
+      <hr/>
       <a class="card-link" routerLink="/foodcourt-summary">Back to List</a>
     </div>
   </div>
