--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,13 +7,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/foodcourt-summary">Information</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/contactus">Contact us</a>
+        <a class="nav-link" routerLink="/contactus">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
