--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,14 +6,14 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" routerLink="/">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/foodcourt-summary">Information</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/contactus">Contact Us</a>
+        <a class="nav-link" routerLink="/contactus">Enquiries</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
