--- a/src/app/foodcourt-summary/foodcourt-summary.component.html
+++ b/src/app/foodcourt-summary/foodcourt-summary.component.html
@@ -4,6 +4,9 @@
       <h4 class="card-title">{{fc.location}}</h4>
       <p class="card-text">{{fc.op_hours}}</p>
       <p class="card-text">{{fc.description}}</p>
+      <img class="img-thumbnail" src="{{fc.fc_img01}}"/>
+      <img class="img-thumbnail" src="{{fc.fc_img02}}"/>
+    <hr/>
       <span class="btn btn-primary" (click)="onViewDetail(fc.fc_id)">View stalls</span>
     </div>
 </div>
