--- a/src/app/stalldetail/stalldetail.component.html
+++ b/src/app/stalldetail/stalldetail.component.html
@@ -3,6 +3,7 @@
   <div class="card-body">
     <p class="card-text">{{dishes.availability}}</p>
     <p class="card-text">{{dishes.price}}</p>
+    <img class="img-responsive rounded-circle" src="{{dishes.stall_img01}}"/>
   </div>
 </div>
 <hr/>
