--- a/src/app/foodcourtdetail/foodcourtdetail.component.html
+++ b/src/app/foodcourtdetail/foodcourtdetail.component.html
@@ -1,4 +1,5 @@
-<div class="card" *ngFor="let Stalls of stallarr">
+<div class="card-header">Search stall name: <input type="text" [(ngModel)]="searchStr"></div>
+<div class="card" *ngFor="let Stalls of stallarr | find: 'stall_name':searchStr">
   <h3 class="card-header">{{Stalls.stall_name}}</h3>
   <div class="card-body">
     <p class="card-text">{{Stalls.description}}</p>
