--- a/src/app/foodcourtdetail/foodcourtdetail.component.css
+++ b/src/app/foodcourtdetail/foodcourtdetail.component.css
@@ -1,3 +1,14 @@
 div {
     text-align:center;
 }
+
+#heightm {
+    height: 50px;
+}
+.container {
+    margin-top: 20px;
+}
+
+.heightm {
+    margin-top: 20px;
+}
