--- a/src/app/stalldetail/stalldetail.component.css
+++ b/src/app/stalldetail/stalldetail.component.css
@@ -1,7 +1,36 @@
-div {
+html {
+    font-size: 14px;
+  }
+  @media (min-width: 768px) {
+    html {
+      font-size: 16px;
+    }
+  }
+.img {
+    height: 200px;
+    max-width: 250px;
+}
+.cdivv {
     text-align: center;
 }
-img {
-    width: 30%; 
-    height: auto;
+  .container {
+    max-width: 960px;
+    margin-top: 20px;
+  }
+
+.heightm {
+    margin-top: 20px;
 }
+
+  .pricing-header {
+    max-width: 700px;
+  }
+  
+  .card-deck .card {
+    min-width: 220px;
+  }
+  
+  .border-top { border-top: 1px solid #e5e5e5; }
+  .border-bottom { border-bottom: 1px solid #e5e5e5; }
+  
+  .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
