--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/contactus">Enquiries</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/registration">Create account</a>
+      </li>
     </ul>
   </div>
 </nav>
